[gd_scene load_steps=12 format=3 uid="uid://cn8vfh00qa1gr"]

[ext_resource type="Texture2D" uid="uid://b1w5a1t4rnkgv" path="res://sprites/logo.png" id="1_1rj0m"]
[ext_resource type="Script" path="res://components/menu/menu.gd" id="1_arrpl"]
[ext_resource type="Texture2D" uid="uid://mdqfxy13fgv3" path="res://sprites/ui/nine_path_9.png" id="1_ggphr"]
[ext_resource type="Theme" uid="uid://cmqaxsejj61g2" path="res://themes/Buttons.tres" id="2_cfek1"]
[ext_resource type="FontFile" uid="uid://8n7eoa5gi3en" path="res://fonts/pansyhand.ttf" id="3_5nw3e"]
[ext_resource type="Theme" uid="uid://p2q1fmewhw78" path="res://themes/ButtonsClose.tres" id="5_elcxh"]
[ext_resource type="Theme" uid="uid://bml45j5216uci" path="res://themes/ButtonsMenu.tres" id="6_ysbxx"]
[ext_resource type="PackedScene" uid="uid://4l8vqt7tk3qj" path="res://components/menu/scores.tscn" id="8_i1pi6"]
[ext_resource type="PackedScene" uid="uid://db1wgbk5mniqm" path="res://components/menu/encyclopedia/encyclopedia.tscn" id="9_32nl7"]
[ext_resource type="Texture2D" uid="uid://dsykis0r8qtcr" path="res://sprites/ArrowRight.png" id="9_r8mw1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2djy7"]
bg_color = Color(0, 0, 0, 0.254902)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_arrpl")

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2djy7")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 75
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 75
theme_override_constants/margin_bottom = 25

[node name="Container" type="NinePatchRect" parent="PanelContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("1_ggphr")
region_rect = Rect2(0, 0, 16, 16)
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="PointsButton" type="Control" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/PointsButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.0
offset_top = -8.0
offset_right = 68.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_cfek1")

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/PointsButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.0
offset_top = -15.0
offset_right = 51.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.156863, 0.156863, 0.156863, 1)
theme_override_fonts/font = ExtResource("3_5nw3e")
theme_override_font_sizes/font_size = 18
text = "PUNTUACIÓN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DocumentationButton" type="Control" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/DocumentationButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.0
offset_top = -8.0
offset_right = 68.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_cfek1")

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/DocumentationButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.0
offset_top = -15.0
offset_right = 51.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.156863, 0.156863, 0.156863, 1)
theme_override_fonts/font = ExtResource("3_5nw3e")
theme_override_font_sizes/font_size = 18
text = "DOCUMENTACIÓN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GoBackButton" type="Control" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/GoBackButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.0
offset_top = -8.0
offset_right = 68.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_cfek1")

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/GoBackButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.0
offset_top = -15.0
offset_right = 51.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.156863, 0.156863, 0.156863, 1)
theme_override_fonts/font = ExtResource("3_5nw3e")
theme_override_font_sizes/font_size = 18
text = "SALIR"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Logo" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 148.0
offset_top = 6.0
offset_right = 57.0
offset_bottom = -46.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_1rj0m")
expand_mode = 1
stretch_mode = 4

[node name="Close" type="Button" parent="."]
visible = false
layout_mode = 1
offset_left = 378.0
offset_top = 2.0
offset_right = 398.0
offset_bottom = 21.0
theme = ExtResource("5_elcxh")

[node name="Menu" type="Button" parent="."]
layout_mode = 1
offset_left = 378.0
offset_top = 2.0
offset_right = 398.0
offset_bottom = 21.0
theme = ExtResource("6_ysbxx")

[node name="scores" parent="." instance=ExtResource("8_i1pi6")]
visible = false
layout_mode = 1

[node name="Encyclopedia" parent="." instance=ExtResource("9_32nl7")]
visible = false
layout_mode = 1

[node name="Back" type="TextureButton" parent="."]
visible = false
layout_mode = 0
offset_left = 381.0
offset_top = 5.0
offset_right = 398.0
offset_bottom = 20.0
texture_normal = ExtResource("9_r8mw1")

[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/PointsButton/Button" to="." method="_on_points_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/DocumentationButton/Button" to="." method="_on_button_doc_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/GoBackButton/Button" to="." method="_on_button_back_pressed"]
[connection signal="pressed" from="Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
